Fix merged build

BUG: 322289
Fix merged build.
Use merged build in travis build to speed it up.